# lamptimer

./: .gitignore  README.md  lampTimer.py  main.py  pyproject.toml  setup.py  test_lampTimer.py
.github/workflows/: ci.yml
lamptimer/: .__init__.py.swp  .day.py.swp  .lamptimer.py.swp  .month.py.swp  __init__.py  __main__.py  day.py  lamptimer.py  month.py
lamptimer/tests/: .test_lamptimer.py.swp  test_day.py  test_lamptimer.py
old/: LICENSE
old/lamptimer/: lamptimer.py
old/lamptimer/tests/: test_day.py  test_lamptimer.py  test_month.py
src/lamptimer/: __init__.py  cli.py  day.py  formatters.py  month.py  month_summary.py
src/lamptimer/cli_output/: __init__.py  formatters.py  month_summary.py  output_format.py
tests/: conftest.py  test_cli.py  test_day.py  test_formatters.py  test_month.py  test_month_summary.py
