[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lamptimer"
authors = [
  { name = "Tanpreet Grewal" }
]
version = "1.0"
description = "Find the perfect time to turn on a lamp in the evening"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astral>=3.2",
]

[project.urls]
Repository = "https://github.com/tanline/lamptimer"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.9",
]

[tool.ruff]
exclude = [
  "old"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[project.scripts]
lamptimer-cli = "lamptimer:cli"